# Robotics-Studio-1_Turtlebot_warehouse_simulation

./: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  Pathplaning.cs  PlatLocation.xlsx  README.md  cmake_install.cmake  mainpage.dox  package.xml  test
ExcelFile/: PlatLocation1.csv  grid
MapFile/: map.pgm
WAREHOUSE_WORLD/: README.MD  t
WAREHOUSE_WORLD/launch/: compact_warehouse.launch  large_warehouse.launch
WAREHOUSE_WORLD/worlds/: compact_warehouse.world  final_warehouse.world  warehouse_smart_world  warehouse_smart_world.world
atomic_configure/: setup.sh
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: _setup_util.py  robotics-studio-1.pc  robotics-studio-1Config.cmake
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: robotics-studio-1.pc
devel/share/robotics-studio-1/cmake/: robotics-studio-1Config.cmake
doc/: manifest.yaml
doc/html/: ROSEnvironment_8cpp.html  ROSEnvironment_8cpp__incl.map  ROSEnvironment_8cpp__incl.md5  ROSEnvironment_8cpp_source.html  ROSEnvironment_8h.html  ROSEnvironment_8h__dep__incl.map  ROSEnvironment_8h__dep__incl.md5  ROSEnvironment_8h__incl.map  ROSEnvironment_8h__incl.md5  ROSEnvironment_8h_source.html  ROSNode_8cpp.html  ROSNode_8cpp__incl.map  ROSNode_8cpp__incl.md5  ROSNode_8cpp_source.html  ROSNode_8h.html  ROSNode_8h__dep__incl.map  ROSNode_8h__dep__incl.md5  ROSNode_8h__incl.map  ROSNode_8h__incl.md5  ROSNode_8h_source.html  Sensor_8cpp.html  Sensor_8cpp__incl.map  Sensor_8cpp__incl.md5  Sensor_8cpp_source.html  TestPathPlanning_8cpp.html  TestPathPlanning_8cpp__incl.map  TestPathPlanning_8cpp__incl.md5  TestPathPlanning_8cpp_source.html  annotated.html  bug.html  classController-members.html  classController.html  classControllerInterface-members.html  classControllerInterface.html  classControllerInterface__inherit__graph.map  classControllerInterface__inherit__graph.md5  classController__inherit__graph.map  classController__inherit__graph.md5  classMission-members.html  classMission.html  (+134 more)
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googletest/: CTestTestfile.cmake  Makefile
logs/: path_log.txt  pickupshelf.bag  pointLocation.bag
my_custom_world_gazebo/: CMakeLists.txt  package.xml
my_custom_world_gazebo/launch/: README.md  complex_warehouse.launch  medium_warehouse.launch  my_robot_launch_file.launch
my_custom_world_gazebo/worlds/: README.md  complex_warehouse.world  final_warehouse.world  medium_warehouse.world
my_custom_world_gazebo/yaml/: complex.pgm  complex.yaml
picture/: map.pgm
src/: main.cpp
src/ControllerInterface/: MoveModelPlugin.cpp  ROSEnvironment.cpp  ROSNode.cpp  Sensor.cpp  controller.cpp  pathfinding.cpp  sensor.cpp
src/MissionInterface/: mission.cpp
test/: TestPathPlanning.cpp  missiontest.cpp  utest.cpp
